--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <div class="header">
     <div class="header-content">
         <div class="header-left">
-            <a href="http://127.0.0.1:5000/">
+            <a href="#" id="refreshIndicatorLink">
                 <img id="refreshIndicator" class="refresh-indicator"
                      src="{{ url_for('static', filename='normal.gif') }}" alt="Status Indicator">
             </a>
