Inbuilt webhook test added, and removed select all option

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,16 @@
                 Global Search
             </button>
         </div>
+        <div class="control-group">
+            <button id="testWebhookBtn" onclick="webhookViewer.testWebhook()" class="btn-secondary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     style="margin-right: 0.5rem;">
+                    <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                </svg>
+                Test Webhook
+            </button>
+        </div>
         <div class="control-group connection-status" id="connectionStatus">
             <span class="status-dot"></span>
             <span class="status-text">Connecting...</span>
@@ -124,7 +134,6 @@
                 </button>
             </div>
             <span class="search-info" id="searchInfo"></span>
-            <button class="btn-secondary" onclick="webhookViewer.selectAllJson()">Select All</button>
             <button class="btn-secondary copy-btn-fixed" id="copyJsonBtn" onclick="webhookViewer.copyJsonFromControl()">
                 Copy
             </button>
